--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
   text-shadow: 0 1px 0 #fff, 1px 0 0 #fff, -1px 0 0 #fff, 0 -1px 0 #fff;
 }
 
-.label,
 .node--root,
 .node--leaf {
   pointer-events: none;
@@ -79,7 +78,8 @@ d3.json("data/friends.json", function(error, root) {
         var textsize = '+0';
         textsize = d === root ? '+4' : textsize;
         textsize = d.parent === root ? '+2' : textsize;
-        var ret = '<font size="' + textsize + '">' + d.name + '</font>';
+        fblink = d.fb?d.fb:"#";
+        var ret = '<a href=http://www.facebook.com/'+fblink+'>'+'<font size="' + textsize + '">' + d.name + '</font></a>';
         ret += d.title ? '<br>' + d.title : '';
         return ret;
       });
