--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@ d3.json("data/friends.json", function(error, root) {
       .append("xhtml:body")
       .html(function(d) {
         var textsize = '+0';
-        textsize = d === root ? '+4' : textsize;
-        textsize = d.parent === root ? '+2' : textsize;
+        textsize = d.parent === root ? '+3' : textsize;
+        textsize = d.parent ? d.parent.parent === root ? '+2' : textsize : textsize;
         fblink = d.fb?d.fb:"#";
         var ret = '<a href=http://www.facebook.com/'+fblink+'>'+'<font size="' + textsize + '">' + d.name + '</font></a>';
         ret += d.title ? '<br>' + d.title : '';
