change appear/disappear logic

--- a/index.html
+++ b/index.html
@@ -105,8 +105,8 @@ d3.json("data/friends.json", function(error, root) {
     transition.selectAll("foreignObject")
       .filter(function(d) { return d.parent === focus || this.style.display === "inline"; })
         .style("fill-opacity", function(d) { return d.parent === focus ? 1 : 0; })
-        .each("start", function(d) { if (d.parent === focus) this.style.display = "inline"; })
-        .each("end", function(d) { if (d.parent !== focus) this.style.display = "none"; });
+        .each("start", function(d) { if (d.parent !== focus) this.style.display = "none"; })
+        .each("end", function(d) { if (d.parent === focus) this.style.display = "inline"; });
   }
 
   function zoomTo(v) {
