Second page files all added

--- a/home.html
+++ b/home.html
@@ -21,26 +21,35 @@
 	<!-- /end -->
 
 	<!-- Google fonts -->
-	<link href="https://fonts.googleapis.com/css?family=Lato|Raleway:300i" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Lato|Miriam+Libre:700|Raleway:300i" rel="stylesheet">
 	<!-- /end Google fonts -->
 
 </head>
 <body>
 	<div class="main">
-		<nav class="nav">
-			<img src="img/viz-w.png" class="logo"><p class="logo-tag">VizWorld</p>
-		</nav>
+		<!--<nav class="nav">
+			<img src="img/sample.png" class="logo"><p class="logo-tag">VizWorld</p>
+		</nav>-->
 		<div class="info">
-			<h2 class="headline">Visualize your world</h2>
-			<p class="motto">There are tons of friends at your workspace that are yet to be discovered. Find and make new work friends now.</p>
-			<button type="button" class="btn btn-primary">Continue with Facebook</button>
+			<div class="hd-bk">
+				<h2 class="headline">Visualize your world</h2>
+			</div>
+			<div class="mt-bk">
+				<p class="motto">There are tons of friends at your workspace that are yet to be discovered. Find and make new work friends now.</p>
+			</div>
+			
+			<a href="">
+				<button type="button" class="btn btn-primary animsition-link">Continue with Facebook</button>
+			</a>
 		</div>
 	</div>
 
-	<!-- Jquery, Tether, Bootstrap JS -->
+	<!-- Jquery, Tether, Bootstrap JS, animsition.js -->
 	 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.0.0/jquery.min.js" integrity="sha384-THPy051/pYDQGanwU6poAc/hOdQxjnOEXzbT+OuUAFqNqFjL+4IGLBgCJC3ZOShY" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.2.0/js/tether.min.js" integrity="sha384-Plbmg8JY28KFelvJVai01l8WyZzrYWG825m+cZ0eDDS1f7d/js6ikvy1+X+guPIB" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.3/js/bootstrap.min.js" integrity="sha384-ux8v3A6CPtOTqOzMKiuo3d/DomGaaClxFYdCu2HPMBEkf6x2xiDyJ7gkXU0MWwaD" crossorigin="anonymous"></script>
     <!-- /end Jquery, Tether, Bootstrap JS -->
+
+    
 </body>
 </html>
