--- a/visual.html
+++ b/visual.html
@@ -46,5 +46,102 @@
 			
 		</div>
 	</div>
+<script src="//d3js.org/d3.v3.min.js"></script>
+<script>
+
+var margin = 20,
+    diameter = 960;
+
+var color = d3.scale.linear()
+    .domain([-1, 5])
+    .range(["hsl(152,80%,80%)", "hsl(228,30%,40%)"])
+    .interpolate(d3.interpolateHcl);
+
+var pack = d3.layout.pack()
+    .padding(2)
+    .size([diameter - margin, diameter - margin])
+    .value(function(d) { return d.size; })
+
+var svg = d3.select(".diagram").append("svg")
+    .attr("width", diameter)
+    .attr("height", diameter)
+  .append("g")
+    .attr("transform", "translate(" + diameter / 2 + "," + diameter / 2 + ")");
+
+d3.json("data/friends.json", function(error, root) {
+  if (error) throw error;
+
+  var focus = root,
+      nodes = pack.nodes(root),
+      view;
+  //console.log(nodes);
+  var circle = svg.selectAll("circle")
+      .data(nodes)
+    .enter().append("circle")
+      .attr("class", function(d) { return d.parent ? d.children ? "node" : "node node--leaf" : "node node--root"; })
+      .style("fill", function(d) { return d.children ? color(d.depth) : null; })
+      .on("click", function(d) { if (focus !== d) zoom(d), d3.event.stopPropagation(); });
+
+  var text = svg.selectAll("text")
+      .data(nodes)
+    .enter()
+    .append("foreignObject")
+      .attr("class", "label")
+      .style("fill-opacity", function(d) { return d.parent === root ? 1 : 0; })
+      .style("display", function(d) { return d.parent === root ? "inline" : "none"; })
+      .attr("width", 200)
+      .attr("height", 50)
+      .attr("x",-50)
+      .append("xhtml:body")
+      .html(function(d) {
+        if(!d.children && d.photo)
+         var im='<img src='+d.photo+'>';
+        else {
+          var im="";
+        }
+        var textsize = '+0';
+        textsize = d.parent === root ? '+3' : textsize;
+        textsize = d.parent ? d.parent.parent === root ? '+2' : textsize : textsize;
+        fblink = d.fb?d.fb:"#";
+        var ret = '<a href=http://www.facebook.com/'+fblink+'>'+'<font size="' + textsize + '">' + d.name + '</font></a>';
+        ret += d.title ? '<br>' + d.title : '';
+        return im+'<br>'+ret;
+      });
+
+  var node = svg.selectAll("circle,foreignObject");
+
+  d3.select("body")
+      .style("background", color(-1))
+      .on("click", function() { zoom(root); });
+
+  zoomTo([root.x, root.y, root.r * 2 + margin]);
+
+  function zoom(d) {
+    var focus0 = focus; focus = d;
+
+    var transition = d3.transition()
+        .duration(d3.event.altKey ? 7500 : 750)
+        .tween("zoom", function(d) {
+          var i = d3.interpolateZoom(view, [focus.x, focus.y, focus.r * 2 + margin]);
+          return function(t) { zoomTo(i(t)); };
+        });
+
+    transition.selectAll("foreignObject")
+      .filter(function(d) { return d.parent === focus || this.style.display === "inline"; })
+        .style("fill-opacity", function(d) { return d.parent === focus ? 1 : 0; })
+        .each("start", function(d) { if (d.parent !== focus) this.style.display = "none"; })
+        .each("end", function(d) { if (d.parent === focus) this.style.display = "inline"; });
+  }
+
+  function zoomTo(v) {
+    var k = diameter / v[2]; view = v;
+    node.attr("transform", function(d) { return "translate(" + (d.x - v[0]) * k + "," + (d.y - v[1]) * k + ")"; });
+    circle.attr("r", function(d) { return d.r * k; });
+  }
+});
+
+d3.select(self.frameElement).style("height", diameter + "px");
+
+</script>
 </body>
 </html>
