--- a/home.html
+++ b/home.html
@@ -27,17 +27,23 @@
 </head>
 <body>
 	<div class="main">
+		<div class="main-logo">
+			<img src="img/logo.jpg">
+		</div>
 		<!--<nav class="nav">
 			<img src="img/sample.png" class="logo"><p class="logo-tag">VizWorld</p>
 		</nav>-->
 		<div class="info">
 			<div class="hd-bk">
-				<h2 class="headline">Visualize your world</h2>
+				<h2 class="headline">Facebook Connections</h2>
 			</div>
 			<div class="mt-bk">
 				<p class="motto">There are tons of friends at your workspace that are yet to be discovered. Find and make new work friends now.</p>
 			</div>
-				<a href="visual.html" role="button" class="btn btn-primary animsition-link">Continue with Facebook</a>
+			
+			<a href="">
+				<button type="button" class="btn btn-primary animsition-link">Continue with Facebook</button>
+			</a>
 		</div>
 	</div>
 
