--- a/home.html
+++ b/home.html
@@ -40,10 +40,7 @@
 			<div class="mt-bk">
 				<p class="motto">There are tons of friends at your workspace that are yet to be discovered. Find and make new work friends now.</p>
 			</div>
-			
-			<a href="">
-				<button type="button" class="btn btn-primary animsition-link">Continue with Facebook</button>
-			</a>
+			<a href="visual.html" role="button" class="btn btn-primary animsition-link">Continue with Facebook</a>
 		</div>
 	</div>
 
