--- a/visual.html
+++ b/visual.html
@@ -104,10 +104,10 @@ d3.json("data/friends.json", function(error, root) {
         var textsize = '+0';
         textsize = d.parent === root ? '+3' : textsize;
         textsize = d.parent ? d.parent.parent === root ? '+2' : textsize : textsize;
-        fblink = d.fb?d.fb:"#";
-        var ret = '<a href=http://www.facebook.com/'+fblink+'>'+'<font size="' + textsize + '">' + d.name + '</font></a>';
+        fblink = d.fb?d.fb:d.name;
+        var ret = '<a href=http://www.facebook.com/'+fblink+'>'+im+'<font size="' + textsize + '">' + d.name + '</font></a>';
         ret += d.title ? '<br>' + d.title : '';
-        return im+'<br>'+ret;
+        return ret;
       });
 
   var node = svg.selectAll("circle,foreignObject");
