--- a/visual.html
+++ b/visual.html
@@ -8,7 +8,7 @@
 	<meta name="keywords" content="vizWorld">
 	<meta name="author" content="VizWorld team: Sunmath, Greg, Olu">
 
-	<title>VizWorld: Your data</title>
+	<title>FB Connections</title>
 
 	<!-- Bootstrap CSS -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.3/css/bootstrap.min.css" integrity="sha384-MIwDKRSSImVFAZCVLtU0LMDdON6KVCrZHyVQQj6e8wIEJkW4tvwqXrbMIya1vriY" crossorigin="anonymous">
