--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 				<h2 class="headline">Facebook Connections</h2>
 			</div>
 			<div class="mt-bk">
-				<p class="motto">There are tons of friends at your workspace that are yet to be discovered. Find and make new work friends now.</p>
+				<p class="motto">There are many of your facebook friends who work for great companies, see who they work for and get in touch with them.</p>
 			</div>
 			<a href="visual.html" role="button" class="btn btn-primary animsition-link">Continue with Facebook</a>
 		</div>
